--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon.ico">
 <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<title>Mundana Template by WowThemesNet</title>
+<title>ScrumMaster</title>
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700" rel="stylesheet">
@@ -20,7 +20,7 @@ NAVBAR
 --------------------------------------->
 <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
 <div class="container">
-	<a class="navbar-brand" href="./index.html"><strong>Mundana</strong></a>
+	<a class="navbar-brand" href="./index.html"><strong>ScrumMaster</strong></a>
 	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
 	</button>
@@ -255,7 +255,7 @@ FOOTER
 	<footer class="bg-white border-top p-3 text-muted small">
 	<div class="row align-items-center justify-content-between">
 		<div>
-            <span class="navbar-brand mr-2"><strong>Mundana</strong></span> Copyright &copy;
+            <span class="navbar-brand mr-2"><strong>ScrumMaster</strong></span> Copyright &copy;
 			<script>document.write(new Date().getFullYear())</script>
 			 . All rights reserved.
 		</div>
