--- a/article.html
+++ b/article.html
@@ -5,7 +5,23 @@
 <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon.ico">
 <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<title>Mundana Template by WowThemesNet</title>
+<title>ScrumMaster</title>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-KBRB2MZ');</script>
+<!-- End Google Tag Manager -->
+<!-- Microsoft Clarity -->	
+<script type="text/javascript">
+	(function(c,l,a,r,i,t,y){
+		c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+		t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+		y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+	})(window, document, "clarity", "script", "gxl37fxzfi");
+</script>
+<!-- Microsoft Clarity -->
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,700" rel="stylesheet">
@@ -51,11 +67,7 @@ NAVBAR
 			<a class="nav-link" href="./docs.html">Template <span class="badge badge-secondary">docs</span></a>
 			</li>
 		</ul>
-		<ul class="navbar-nav ml-auto d-flex align-items-center">
-			<li class="nav-item highlight">
-			<a class="nav-link" href="https://www.wowthemes.net/mundana-free-html-bootstrap-template/">Get this Theme</a>
-			</li>
-		</ul>
+		
 	</div>
 </div>
 </nav>
@@ -222,13 +234,11 @@ FOOTER
 	<footer class="bg-white border-top p-3 text-muted small">
 	<div class="row align-items-center justify-content-between">
 		<div>
-			<span class="navbar-brand mr-2"><strong>Mundana</strong></span> Copyright &copy;
+			<span class="navbar-brand mr-2"><strong>ScrumMaster</strong></span> Copyright &copy;
 			<script>document.write(new Date().getFullYear())</script>
 			 . All rights reserved.
 		</div>
-		<div>
-			 Made with <a target="_blank" class="text-secondary font-weight-bold" href="https://www.wowthemes.net/mundana-free-html-bootstrap-template/">Mundana Theme</a> by WowThemes.net.
-		</div>
+		
 	</div>
 	</footer>
 </div>
@@ -241,5 +251,9 @@ JAVASCRIPTS
 <script src="./assets/js/vendor/popper.min.js" type="text/javascript"></script>
 <script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
 <script src="./assets/js/functions.js" type="text/javascript"></script>
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBRB2MZ"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </body>
 </html>
