--- a/docs.html
+++ b/docs.html
@@ -5,7 +5,23 @@
 <link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon.ico">
 <link rel="icon" type="image/png" href="./assets/img/favicon.ico">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
-<title>Docs for Mundana - Free Template by WowThemesNet</title>
+<title>ScrumMaster</title>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+	new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+	j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+	'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+	})(window,document,'script','dataLayer','GTM-KBRB2MZ');</script>
+<!-- End Google Tag Manager -->
+<!-- Microsoft Clarity -->	
+<script type="text/javascript">
+	(function(c,l,a,r,i,t,y){
+		c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+		t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+		y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+	})(window, document, "clarity", "script", "gxl37fxzfi");
+</script>
+<!-- Microsoft Clarity -->
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
     
 <!-- Google Font -->
@@ -1116,7 +1132,6 @@ FOOTER
 		<div class="col-md-12">			
 			<span class="d-block mt-3 text-muted">©
 			<script>document.write(new Date().getFullYear())</script>
-			 <a target="_blank" href="https://www.wowthemes.net/mundana-free-html-bootstrap-template/">Mundana Theme</a>  by WowThemes.net.
             </span>
 		</div>
 	</div>
@@ -1168,6 +1183,11 @@ $('.popover-dismiss').popover({
   trigger: 'focus'
 })
 </script>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBRB2MZ"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 </body>
 </html>
