--- a/index.html
+++ b/index.html
@@ -82,10 +82,9 @@ HEADER
 		<div class="pl-4 pr-0 h-100 tofront">
 			<div class="row justify-content-between">
 				<div class="col-md-6 pt-6 pb-6 align-self-center">
-					<h1 class="secondfont mb-3 font-weight-bold">Mundana is an HTML Bootstrap Template for Professional Blogging</h1>
+					<h1 class="secondfont mb-3 font-weight-bold">The Scrum Master's Playbook:<br> Guiding Teams to Success </h1>
 					<p class="mb-3">
-						Beautifully crafted with the latest technologies, SASS & Bootstrap 4.1.3, Mundana is the perfect design for your professional blog. Homepage, post article and category layouts available.
-					</p>
+						Discover the pivotal role of the Scrum Master in Agile. Learn how they facilitate teamwork, remove impediments, and lead teams to achieve their full potential.					</p>
 					<a href="./article.html" class="btn btn-dark">Read More</a>
 				</div>
 				<div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/demo/home.jpg);">	</div>
