--- a/the-scrum-masters-playbook-guiding-teams-to-success.html
+++ b/the-scrum-masters-playbook-guiding-teams-to-success.html
@@ -36,7 +36,7 @@ NAVBAR
 --------------------------------------->
 <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
 <div class="container">
-	<a class="navbar-brand" href="./index.html"><strong>Mundana</strong></a>
+	<a class="navbar-brand" href="./index.html"><strong>ScrumMaster</strong></a>
 	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
 	</button>
@@ -84,13 +84,12 @@ HEADER
 					<p class="text-uppercase font-weight-bold">
 						<a class="text-danger" href="./category.html">Stories</a>
 					</p>
-					<h1 class="display-4 secondfont mb-3 font-weight-bold">Sterling could jump 8% if Brexit deal gets approved by UK Parliament</h1>
+					<h1 class="display-4 secondfont mb-3 font-weight-bold">The Scrum Master's Playbook: Guiding Teams to Success </h1>
 					<p class="mb-3">
-						 Analysts told CNBC that the currency could hit anywhere between $1.35-$1.40 if the deal gets passed through the U.K. parliament.
-					</p>
+						In the ever-evolving landscape of Agile development, the Scrum Master emerges as a guiding force, steering teams toward the shores of success. Picture them as the compass that keeps the Agile ship on course, navigating the complex waters of iterative development. 					</p>
 					<div class="d-flex align-items-center">
-						<img class="rounded-circle" src="assets/img/demo/avatar2.jpg" width="70">
-						<small class="ml-2">Jane Seymour <span class="text-muted d-block">A few hours ago &middot; 5 min. read</span>
+						<img class="rounded-circle" src="assets/img/sm_Profile.png" width="70">
+						<small class="ml-2">Scrum Master<span class="text-muted d-block">A few hours ago &middot; 5 min. read</span>
 						</small>
 					</div>
 				</div>
@@ -127,18 +126,34 @@ MAIN
 		</div>
 		<div class="col-md-12 col-lg-8">
 			<article class="article-post">
-			<p>
-				 Holy grail funding non-disclosure agreement advisor ramen bootstrapping ecosystem. Beta crowdfunding iteration assets business plan paradigm shift stealth mass market seed money rockstar niche market marketing buzz market.
-			</p>
-			<p>
-				 Burn rate release facebook termsheet equity technology. Interaction design rockstar network effects handshake creative startup direct mailing. Technology influencer direct mailing deployment return on investment seed round.
-			</p>
-			<p>
-				 Termsheet business model canvas user experience churn rate low hanging fruit backing iteration buyer seed money. Virality release launch party channels validation learning curve paradigm shift hypotheses conversion. Stealth leverage freemium venture startup business-to-business accelerator market.
-			</p>
-			<p>
-				 Freemium non-disclosure agreement lean startup bootstrapping holy grail ramen MVP iteration accelerator. Strategy market ramen leverage paradigm shift seed round entrepreneur crowdfunding social proof angel investor partner network virality.
-			</p>
+				<h2>Understanding the Scrum Master's Role</h2>
+				<p>At the core of Scrum lies the Scrum Master—a servant-leader who serves the team, Product Owner, and organization. Their mission? To foster a self-organizing, high-performing team and remove impediments that hinder progress.</p>
+			
+				<h2>Key Responsibilities of a Scrum Master</h2>
+				<ul>
+					<li><strong>Coach and Mentor:</strong> The Scrum Master coaches the team on Scrum principles, facilitating continuous improvement and growth.</li>
+					<li><strong>Servant Leadership:</strong> They lead by example, prioritizing the team's needs above their own and ensuring a collaborative environment.</li>
+					<li><strong>Impediment Resolution:</strong> Scrum Masters identify and remove obstacles that hinder the team's progress, ensuring a smooth development process.</li>
+					<li><strong>Facilitate Scrum Events:</strong> From Sprint Planning to Retrospectives, Scrum Masters facilitate these events, keeping them focused and productive.</li>
+				</ul>
+			
+				<h2>The Scrum Master's Toolbox</h2>
+				<p>To excel in their role, Scrum Masters leverage various tools and techniques:</p>
+				<ul>
+					<li><strong>Coaching:</strong> They use coaching conversations to empower teams and individuals, guiding them towards self-discovery and problem-solving.</li>
+					<li><strong>Conflict Resolution:</strong> Scrum Masters are skilled in mediating conflicts within the team, promoting healthy discussions and collaboration.</li>
+					<li><strong>Facilitation:</strong> They employ facilitation techniques to keep Scrum events on track, ensuring that the team maximizes their time.</li>
+					<li><strong>Continuous Learning:</strong> Scrum Masters are lifelong learners, staying updated on Agile practices and seeking ways to enhance their skills.</li>
+				</ul>
+			
+				<h2>Measuring Success</h2>
+				<p>Success in the Scrum Master role is measured by the team's progress and the organization's ability to deliver value. High-performing teams, improved velocity, and customer satisfaction are all indicators of a successful Scrum Master.</p>
+			
+				<h2>Conclusion</h2>
+				<p>In the world of Agile, the Scrum Master's playbook is a dynamic and ever-evolving guide. Their ability to empower teams, remove obstacles, and facilitate collaboration makes them invaluable in achieving Agile success. As you embark on your Agile journey, remember that a skilled Scrum Master is the compass that points your team toward excellence.</p>
+			
+				<p>Stay tuned for more insights into the world of Agile and Scrum in our ongoing blog series. Next up, "Product Owner: Crafting a Customer-Centric Scrum."</p>
+			
 			</article>
 			<div class="border p-5 bg-lightblue">
 				<div class="row justify-content-between">
