--- a/the-scrum-masters-playbook-guiding-teams-to-success.html
+++ b/the-scrum-masters-playbook-guiding-teams-to-success.html
@@ -43,16 +43,16 @@ NAVBAR
 	<div class="navbar-collapse collapse" id="navbarColor02" style="">
 		<ul class="navbar-nav mr-auto d-flex align-items-center">
 			<li class="nav-item">
-			<a class="nav-link" href="./index.html">Agile Basics <span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="./agile-basics.html">Agile Basics <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Scrum Framework</a>
+			<a class="nav-link" href="./scrum-framework.html">Scrum Framework</a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Tools & Practices</a>
+			<a class="nav-link" href="./tools-practices.html">Tools & Practices</a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Certification & Training</a>
+			<a class="nav-link" href="./certification-training.html">Certification & Training</a>
 			</li>
 		</ul>
 		
