--- a/the-scrum-masters-playbook-guiding-teams-to-success.html
+++ b/the-scrum-masters-playbook-guiding-teams-to-success.html
@@ -43,16 +43,16 @@ NAVBAR
 	<div class="navbar-collapse collapse" id="navbarColor02" style="">
 		<ul class="navbar-nav mr-auto d-flex align-items-center">
 			<li class="nav-item">
-			<a class="nav-link" href="./agile-basics.html">Agile Basics <span class="sr-only">(current)</span></a>
+			<a class="nav-link" href="./index.html">Agile Basics <span class="sr-only">(current)</span></a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link" href="./scrum-framework.html">Scrum Framework</a>
+			<a class="nav-link" href="./article.html">Scrum Framework</a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link" href="./tools-practices.html">Tools & Practices</a>
+			<a class="nav-link" href="./article.html">Tools & Practices</a>
 			</li>
 			<li class="nav-item">
-			<a class="nav-link" href="./certification-training.html">Certification & Training</a>
+			<a class="nav-link" href="./article.html">Certification & Training</a>
 			</li>
 		</ul>
 		
@@ -82,7 +82,7 @@ HEADER
 					</div>
 				</div>
 				<div class="col-md-6 pr-0">
-					<img src="./assets/img/demo/intro.jpg">
+					<img src="https://images.unsplash.com/photo-1543857778-c4a1a3e0b2eb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1400&q=80">
 				</div>
 			</div>
 		</div>
