--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ MAIN
                 <div style="background-image: url(https://images.unsplash.com/photo-1543857778-c4a1a3e0b2eb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1400&q=80); height: 150px;    background-size: cover;    background-repeat: no-repeat;"></div>               
 				<div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
 					<h2 class="h4 font-weight-bold">
-					<a class="text-dark" href="./article.html">Mastering Agile Principles: A Comprehensive Guide</a>
+					<a class="text-dark" href="./mastering-agile-principles-a-comprehensive-guide.html">Mastering Agile Principles: A Comprehensive Guide</a>
 					</h2>
 					<p class="card-text">
 						Dive into the core values of Agile, the key to achieving excellence in Agile development. Explore how these principles shape Agile methodologies.
@@ -120,7 +120,7 @@ MAIN
 					<img height="80" src="./assets/img/demo/blog4.jpg">
 					<div class="pl-3">
 						<h2 class="mb-2 h6 font-weight-bold">
-						<a class="text-dark" href="./article.html">Demystifying Scrum: A Deep Dive into the Framework</a>
+						<a class="text-dark" href="./demystifying-scrum-a-deep-dive-into-the-framework.html">Demystifying Scrum: A Deep Dive into the Framework</a>
 						</h2>
 						<div class="card-text text-muted small">
 							Take a deep dive into the Scrum framework, its roles, events, and artifacts. Navigate the world of Scrum with confidence and clarity.
@@ -132,7 +132,7 @@ MAIN
 					<img height="80" src="./assets/img/demo/blog5.jpg">
 					<div class="pl-3">
 						<h2 class="mb-2 h6 font-weight-bold">
-						<a class="text-dark" href="./article.html">Cracking the Agile Code: Understanding Its Core Values</a>
+						<a class="text-dark" href="./cracking-the-agile-code-understanding-its-core-values.html">Cracking the Agile Code: Understanding Its Core Values</a>
 						</h2>
 						<div class="card-text text-muted small">
 							Uncover the foundational values that form the bedrock of Agile success. Gain insights into the principles that drive Agile excellence.
@@ -144,7 +144,7 @@ MAIN
 					<img height="80" src="./assets/img/demo/blog6.jpg">
 					<div class="pl-3">
 						<h2 class="mb-2 h6 font-weight-bold">
-						<a class="text-dark" href="./article.html">Daily Scrum Mastery: Enhancing Team Collaboration</a>
+						<a class="text-dark" href="./daily-scrum-mastery-enhancing-team-collaboration.html">Daily Scrum Mastery: Enhancing Team Collaboration</a>
 						</h2>
 						<div class="card-text text-muted small">
 							Elevate your daily Scrum meetings to boost team collaboration, communication, and focus. Maximize the value of this Agile ritual.
@@ -164,7 +164,7 @@ MAIN
 			<div class="mb-3 d-flex justify-content-between">
 				<div class="pr-3">
 					<h2 class="mb-1 h4 font-weight-bold">
-					<a class="text-dark" href="./article.html">Sprint Planning: Setting the Course for Success</a>
+					<a class="text-dark" href="sprint-planning-setting-the-course-for-success.html">Sprint Planning: Setting the Course for Success</a>
 					</h2>
 					<p>
 						Learn the art of Sprint planning, from defining goals to selecting user stories, and ensure a successful development cycle.
@@ -176,7 +176,7 @@ MAIN
 			<div class="mb-3 d-flex justify-content-between">
 				<div class="pr-3">
 					<h2 class="mb-1 h4 font-weight-bold">
-					<a class="text-dark" href="./article.html">The Sprint Backlog: Managing Work for Success</a>
+					<a class="text-dark" href="./the-sprint-backlog-managing-work-for-success.html">The Sprint Backlog: Managing Work for Success</a>
 					</h2>
 					<p>
 						Explore how to create and manage the Sprint Backlog effectively to ensure that your team delivers on its Sprint goals.
