--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	})(window, document, "clarity", "script", "gxl37fxzfi");
 </script>
 <!-- Microsoft Clarity -->
+
 <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
 <!-- Google Font -->
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700" rel="stylesheet">
@@ -32,6 +33,7 @@
 <!-- Main CSS -->
 <link href="./assets/css/main.css" rel="stylesheet"/>
 </head>
+
 <body>
 	<!-- Google Tag Manager (noscript) -->
 		<noscript>
@@ -271,6 +273,11 @@ JAVASCRIPTS
 <script src="./assets/js/vendor/popper.min.js" type="text/javascript"></script>
 <script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
 <script src="./assets/js/functions.js" type="text/javascript"></script>
+
+<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KBRB2MZ"
+	height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 
 </body>
 </html>
