--- a/agile-user-stories-crafting-effective-requirements.html
+++ b/agile-user-stories-crafting-effective-requirements.html
@@ -92,14 +92,9 @@ MAIN
 				<div class="text-muted">
 					Share this
 				</div>
-				<div class="share d-inline-block">
+		
 					<!-- AddToAny BEGIN -->
-					<div class="a2a_kit a2a_kit_size_32 a2a_default_style">
-						<a class="a2a_dd" href="https://www.addtoany.com/share"></a>
-						<a class="a2a_button_facebook"></a>
-						<a class="a2a_button_twitter"></a>
-					</div>
-					<script async src="https://static.addtoany.com/menu/page.js"></script>
+					<div class="sharethis-sticky-share-buttons"></div>
 					<!-- AddToAny END -->
 				</div>
 			</div>
