--- a/index.html
+++ b/index.html
@@ -246,7 +246,14 @@ MAIN
 				</li>
 				
 			</ol>
+
+		<div>
+			<script async src="https://cse.google.com/cse.js?cx=e2a427ed10d9f41a0">
+			</script>
+			<div class="gcse-search"></div>
 		</div>
+		</div>
+	
 	</div>
 </div>
     
